@startuml

title __SRC's Class Diagram__\n

  namespace  {
    abstract class AccountDecorator {
        + AccountDecorator()
        + describeAccount()
    }
  }
  

  namespace  {
    abstract class BankAccount {
        # balance : double
        - accNum : int
        + BankAccount()
        + BankAccount()
        + describeAccount()
    }
  }
  

  namespace  {
    class BankApplication {
        {static} + main()
    }
  }
  

  namespace  {
    class CurrentAccount {
        - TYPE : String
        + CurrentAccount()
        + describeAccount()
    }
  }
  

  namespace  {
    class GoldenYears {
        + GoldenYears()
        + addGoldenYears()
        + describeAccount()
    }
  }
  

  namespace  {
    class Graduate {
        + Graduate()
        + addGraduate()
        + describeAccount()
    }
  }
  

  namespace  {
    class Online {
        + Online()
        + addOnline()
        + describeAccount()
    }
  }
  

  namespace  {
    class Person {
        - address : String
        - name : String
        + Person()
        + Person()
        + toString()
    }
  }
  

  namespace  {
    class Personal {
        + Personal()
        + addPersonal()
        + describeAccount()
    }
  }
  

  namespace  {
    class SavingsAccount {
        - TYPE : String
        + SavingsAccount()
        + describeAccount()
    }
  }
  

  namespace  {
    class Student {
        + Student()
        + addStudent()
        + describeAccount()
    }
  }
  

  AccountDecorator -up-|> BankAccount
  AccountDecorator o-- BankAccount : account
  BankAccount o-- Person : accHolder
  CurrentAccount -up-|> BankAccount
  GoldenYears -up-|> AccountDecorator
  Graduate -up-|> AccountDecorator
  Online -up-|> AccountDecorator
  Personal -up-|> AccountDecorator
  SavingsAccount -up-|> BankAccount
  Student -up-|> AccountDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
